--- a/popup.html
+++ b/popup.html
@@ -4,13 +4,18 @@
     <title>Popup</title>
     <link rel="stylesheet" href="tailwind-output.css">
     <style>
-        body {
+        body, html {
+            background-color: #f2f2f2; /* Match the input field's background color */
+            border: none; 
             margin: 0;
             padding: 0;
             background-color: transparent; 
-            width: auto; 
-            height: auto; 
+            width: auto;
+            height: auto;
+            min-width: 0;
+            min-height: 0;
         }
+
 
         .input-container {
             position: relative;
