--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 <head>
     <title>Popup</title>
     <link rel="stylesheet" href="tailwind-output.css">
+    <script type="module" src="popup.js"></script>
     <style>
         body, html {
             background-color: #f2f2f2; /* Match the input field's background color */
@@ -37,10 +38,10 @@
 <body>
 
     <div class="input-container rounded-md">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="gray" class="w-6 h-6">
+        <svg xmlns="http://www.w3.org/2000/svg" id="magnifier" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="gray" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
         </svg>
-        <input type="text" id="searchInput" class="flex h-10 w-full border border-input bg-gray-800 rounded-md px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50" placeholder="Search...">
+        <input type="text" id="searchInput" class="flex h-10 w-full border border-input bg-gray-900 rounded-md px-3 py-2 text-sm text-gray-300 ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50" placeholder="Search...">
     </div>
 
 </body>
