--- a/sidepanel.html
+++ b/sidepanel.html
@@ -7,19 +7,20 @@
     <style>
         .input-container {
             position: relative;
-            width: 300px;
+            width: 90%;
+            padding-top: 10px;
             margin: auto;
         }
 
         .input-container svg {
             position: absolute;
             left: 10px;
-            top: 50%;
+            top: 60%;
             transform: translateY(-50%);
         }
 
         .input-container input {
-            padding-left: 2.5rem; 
+            padding: 1.5rem 0 1.5rem 2.5rem; 
         }
     </style>
 </head>
