renamed modules related to sidepanel

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -3,7 +3,7 @@
 <head>
     <title>Popup</title>
     <link rel="stylesheet" href="tailwind-output.css">
-    <script type="module" src="popup.js"></script>
+    <script type="module" src="sidepanel.js"></script>
     <style>
         .input-container {
             position: relative;
