--- a/sidepanel.html
+++ b/sidepanel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Popup</title>
+    <title>Search Engine</title>
     <link rel="stylesheet" href="tailwind-output.css">
     <script type="module" src="sidepanel.js"></script>
     <style>
