--- a/sidepanel.html
+++ b/sidepanel.html
@@ -32,6 +32,8 @@
         </svg>
         <input type="text" id="searchInput" class="flex h-10 w-full border-input bg-slate-900 rounded-xl px-3 py-2 text-sm text-gray-300 ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50" placeholder="Search..." />
     </div>
+
+    <div id="resultsContainer"></div>
     
 </body>
 </html>
