add styling for list items

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -22,6 +22,16 @@
         .input-container input {
             padding: 1.5rem 0 1.5rem 2.5rem; 
         }
+
+        #resultsContainer { 
+            width: 90%;
+            margin: auto;
+            padding: 1rem 0;
+        }
+
+        .listItem {
+            padding: 0.75rem 0;
+        }
     </style>
 </head>
 <body class="bg-slate-800">
